--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.5",
     "sharp": "^0.29.1",
